polish: Cook's Assistant (#2215)
* refactor: modernize

 - Java 11, single-line declarations
 - reorder method order
   order I used:
   ordered logically:
   setupZones
   setupRequirements
   setupSteps
   loadSteps
   ordered based on order in the sidebar:
   getItemRequirements
   getItemRecommended
   getEnemiesToDefeat
   getQuestPointReward
   getExperienceRewards
   getItemRewards
   getUnlockRewards
   getPanels
 - use LogicHelper instead of raw Conditions

* fix: use gameval VarbitID for mill state

* java11

* feat: add WidgetHighlight builder for highlighting an item in a shop interface

* fix(gameval): make use of new createShopItemHighlight for highlighting items in the shop interface

* todo

* polish: reorder steps

* refactor: reorganize steps to match rough quest flow

* fix: coin quantity

* fix: highlight pot in general store interface

* chore: add myself to copyright

* polish: make use of dialog requirements to clean up the finishing step

it's not perfect since we can't track the state through relogs, but this makes the steps not jump around frantically
when turning in the ingredients

* check the "you've turned in everything!" message too

* remove unused import